<resources>
    <string name="bytes">%d B</string>
    <string name="kibibytes">%.1f KB</string>
    <string name="mibibytes">%.1f MB</string>
    <string name="gigibytes">%.1f GB</string>
    <string name="please_wait">Please, wait…</string>
    <string name="app_extract_success">The application has been exported successfully</string>
    <string name="app_extract_failed">Exporting failed :(</string>
    <string name="tomclaw_software">Modified by Hiaashuu</string>
    <string name="app_version">Version %1$s (%2$d)</string>
    <string name="info">Info</string>
    <string name="pref_summary_show_system">Show system applications in list</string>
    <string name="pref_title_show_system">System apps</string>
    <string name="got_it">Got it!</string>
    <string name="system_apps_warning_title">Warning!</string>
    <string name="system_apps_warning_message">System apps are not usual apps and there is no warranty of its
        successful export!
    </string>
    <string name="settings">Settings</string>
    <string name="success">Success!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send_to">Share with</string>
    <string name="pref_title_sort_order">Sort order</string>
    <string name="sort_order_ascending">A - Z</string>
    <string name="sort_order_descending">Z - A</string>
    <string name="sort_order_app_size">By app size</string>
    <string name="sort_order_install_time">By install time</string>
    <string name="sort_order_update_time">By update time</string>
    <string name="pref_summary_sort_order">Apps list sort order variants</string>
    <string name="extract_apk">Extract APK</string>
    <string name="share_apk">Share APK via apps</string>
    <string name="upload_apk">Upload APK and get link</string>
    <string name="upload_app">Upload application</string>
    <string name="bluetooth_apk">Send via Bluetooth</string>
    <string name="find_on_gp">Find in Google Play</string>
    <string name="find_on_store">Find in Appteka Store</string>
    <string name="remove_app">Remove application</string>
    <string name="send_url_to">Share URL with</string>
    <string name="share_url">Share</string>
    <string name="pref_title_clear_cache">Clear cache</string>
    <string name="pref_summary_clear_cache">Remove all previously extracted APK files in Downloads directory</string>
    <string name="cache_cleared_successfully">Cache cleared successfully</string>
    <string name="cache_clearing_failed">Cache clearing failed</string>
    <string name="menu_search">Search</string>
    <string name="run_app">Run application</string>
    <string name="non_launchable_package">This package is not runnable.</string>
    <string name="app_details">Show details</string>
    <string name="install">Install</string>
    <string name="install_app">Install application</string>
    <string name="request_delete_packages">In order to delete applications you need to grant permissions</string>
    <string name="write_permission_download">Storage permission is required to download apps</string>
    <string name="write_permission_share">Storage permission is required to share apps</string>
    <string name="write_permission_clear_cache">Storage permission is required to clear cache</string>
    <string name="write_permission_view_downloads">Storage permission is required to view downloads</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_summary_theme">Select the app theme</string>
    <string name="pref_title_dynamic_colors">Dynamic colors</string>
    <string name="pref_summary_dynamic_colors">Uses wallpaper colors on Android 12+ devices</string>
    <string name="theme_dialog_title">Select theme</string>
    <string name="theme_system">System default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_battery_saver">Battery saver</string>
    <string name="restart_now">Restart now</string>
    <string name="clear_cache_dialog_title">Confirm Cache Clearing</string>
    <string name="clear_cache_dialog_message">All previously downloaded APKs by %1$s in Storage will be removed. This action cannot be undone. Do you wish to proceed?</string>
    <string name="clear_cache_dialog_positive">Yes, Delete Files</string>
    <string name="restart_required_dynamic_colors_short">Restart to apply changes.</string>
    <string name="pref_title_seed_color">App color</string>
    <string name="pref_summary_seed_color">Choose a custom color scheme when dynamic colors are off</string>
    <string name="pref_summary_seed_color_unavailable">Requires Android 12 or higher</string>
    <string name="seed_color_dialog_title">Choose app color</string>
    <string name="pref_category_appearance_title">Appearance</string>
    <string name="pref_category_app_behavior_title">App Behavior</string>
    <string name="pref_category_general_title">General</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="tab_store">Store</string>
    <string name="retry">Retry</string>
    <string name="store_loading_error">Failed to retrieve applications list</string>
    <string name="downloads">Downloads</string>
    <string name="android">Android</string>
    <string name="size_comment">Application\nsize</string>
    <string name="open">Open</string>
    <string name="remove">Remove</string>
    <string name="unknown_permission_description">Unknown permission</string>
    <string name="required_permissions">Required permissions</string>
    <string name="app_version_title">Version</string>
    <string name="uploaded_title">Uploaded</string>
    <string name="checksum_title">Checksum (SHA1)</string>
    <string name="update">Update</string>
    <string name="abuse">Abuse</string>
    <string name="your_email">Your E-mail</string>
    <string name="store_app_update">Update</string>
    <string name="store_app_installed">Installed</string>
    <string name="feedback_email">Feedback</string>
    <string name="send_email">Send email</string>
    <string name="no_email_clients">There are no email clients installed</string>
    <string name="update_available">Update is available</string>
    <string name="update_description">Download the latest version of Appteka for free!</string>
    <string name="later">Later</string>
    <string name="telegram_group">Telegram group</string>
    <string name="telegram_subtitle">Join our community</string>
    <string name="source_code">Source code</string>
    <string name="source_code_subtitle">View on GitHub</string>
    <string name="contributors_subtitle">Meet the team</string>
    <string name="feedback_subtitle">support@appteka.store</string>
    <string name="legal_subtitle">Privacy policy and terms</string>
    <string name="links">Links</string>
    <string name="support">Support</string>
    <string name="legal">Legal</string>
    <string name="get_started">Get Started</string>
    <string name="discuss_intro_text">Find, discuss the program?\nShare the impressions of the new game?\nDiscussions are created for this!</string>
    <string name="tab_discuss">Discussions</string>
    <string name="tab_profile">Profile</string>
    <string name="discuss_intro_title">Welcome!</string>
    <string name="chat_loading_error">Failed to open chat</string>
    <string name="enter_your_message">Your message…</string>
    <string name="error_sending_message">Unable to send message</string>
    <string name="select_images">Select images</string>
    <plurals name="topic_last_msg_attachments">
        <item quantity="one">📷 Image</item>
        <item quantity="other">📷 %d images</item>
    </plurals>
    <string name="reply">Reply</string>
    <string name="copy">Copy</string>
    <string name="report">Report abuse</string>
    <string name="error_message_report">Unable to report abuse</string>
    <string name="message_report_sent">Thank you for helping in discussions moderation!</string>
    <string name="exclusive_short">Exclusive</string>
    <string name="exclusive">Exclusive app (do not present in Google Play)</string>
    <string name="exclusive_description">App not available in Google Play</string>
    <string name="description">Description</string>
    <string name="edit_meta">Edit Description</string>
    <string name="ratings">Ratings</string>
    <string name="load_files_error">An error occurred while loading files</string>
    <string name="error_rate_app">Failed to submit ratings, please try again</string>
    <string name="category_not_defined">Not defined</string>
    <string name="app_icon">App icon</string>
    <string name="delivery">Delivery</string>
    <string name="rates_count">Rates count</string>
    <string name="profile">Profile</string>
    <string name="role_owner">Supervisor</string>
    <string name="role_admin">Admin</string>
    <string name="role_moderator">Moderator</string>
    <string name="role_default">User</string>
    <string name="joined_date">joined %s</string>
    <string name="last_seen">last seen %s</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="unlink_file">Block</string>
    <string name="unfile_reason">Reason…</string>
    <string name="enter_unfile_reason">Please describe the reason:</string>
    <string name="unable_to_unfile">Failed to complete request</string>
    <string name="unlink_of">Block of %s</string>
    <string name="profile_apps">User apps</string>
    <string name="nav_store">Store</string>
    <string name="nav_discuss">Discussions</string>
    <string name="nav_installed">Installed</string>
    <string name="nav_downloaded">Downloaded</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_info">Information</string>
    <string name="select_app">Select application</string>
    <string name="select_app_description">Installed one or apk file</string>
    <string name="search_app">Search in store</string>
    <string name="reaction">Reaction</string>
    <string name="select_reactions">Select reactions</string>
    <string name="empty_list">There is nothing here…</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="email_input">E-mail</string>
    <string name="name_input">Name (nickname)</string>
    <string name="ok">OK</string>
    <string name="upload_notice_title">Distribution rights agreement</string>
    <string name="agree_with_upload_notice">To upload applications to Appteka store you must agree with this condition</string>
    <string name="apps_on_moderation">Apps on moderation</string>
    <string name="moderation_approve">Approve</string>
    <string name="moderation_decline">Decline</string>
    <string name="status_unlinked">Blocked</string>
    <string name="status_private">Not published</string>
    <string name="status_on_moderation">On Moderation</string>
    <string name="delete">Delete</string>
    <string name="error_rating_deletion">Unable to delete rating</string>
    <string name="error_download_deletion">Unable to delete from history</string>
    <string name="unpublish_file">Remove from publication</string>
    <string name="unpublish_of">Remove from publication of %s</string>
    <string name="delete_app_title">Delete from store</string>
    <string name="internet_access">Unlimited Internet access</string>
    <string name="calls_access">Phone calls history access</string>
    <string name="sms_access">Contents of SMS</string>
    <string name="storage_access">Storage access</string>
    <string name="location_access">Geolocation tracking</string>
    <string name="select_category">Select category</string>
    <string name="source_code_url">Source code URL</string>
    <string name="required_field">Required field</string>
    <string name="translate">Translate</string>
</resources>